fix align text and button BT#10352 #TMI

--- a/app/Resources/public/css/themes/games/default.css
+++ b/app/Resources/public/css/themes/games/default.css
@@ -106,7 +106,7 @@ body{
   font-weight: bold;
   color: #333;
   text-align: left;
-  padding-top: 10px;
+  padding-top: 5px;
 }
 .welcome-home-top-temp{
   width: 97%;
